Add multi-region question preview