@@ -57,9 +57,18 @@
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.surefire.plugin.version}</version>
 				<configuration>
-					<includes>
-						<include>**/AllTests.java</include>
-					</includes>
+					<argLine>
+						--add-opens
+						au.edu.eq.questionbank/au.edu.eq.questionbank=ALL-UNNAMED
+						--add-opens
+						au.edu.eq.questionbank/au.edu.eq.questionbank.model=ALL-UNNAMED
+						--add-opens
+						au.edu.eq.questionbank/au.edu.eq.questionbank.pdf=ALL-UNNAMED
+						--add-opens
+						au.edu.eq.questionbank/au.edu.eq.questionbank.repository`=ALL-UNNAMED
+						--add-opens
+						au.edu.eq.questionbank/au.edu.eq.questionbank.output=ALL-UNNAMED
+					</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
